# RegmCraft---Game-Prototyper-with-AI

./: .gitignore  README.md  package-lock.json  package.json  supabase_schema.sql
backend/: package-lock.json  package.json
engine/: CMakeLists.txt  helper.sh
engine/data/: matroot.json
engine/data/asefiles/: char_body_cowboy_jacket.ase  char_hair_nerd.ase  char_hat_cowboy_hat.ase  char_head_normal_head.ase  char_leg_levis_pant.ase  char_weapon_knight_sword.ase  template.ase
engine/data/images/: test.ppm
engine/data/models/: hero.json  person.json
engine/data/palettes/: default.json  journey.json
engine/data/parts/: body_v1.json  char_body_cowboy_jacket.json  char_hair_nerd.json  char_hat_cowboy_hat.json  char_head_normal_head.json  char_leg_levis_pant.json  char_weapon_knight_sword.json
engine/include/shared/command/: command.h  utils.h
engine/include/shared/composition/: composition.h
engine/include/shared/image/: const.h  image.h  pixel.h  pixels_array.h  zlib.h
engine/include/shared/json/: array.h  const.h  idmap.h  json.h  object.h  parser.h  psst.h  stringifier.h  value.h
engine/include/shared/jsonmat/: colorrp.h  const.h  hesxstring.h  jsonmat.h  pixel_bound.h  utils.h
engine/include/shared/material/: color.h  color_stat.h  const.h  map.h  material.h  matroot.h  model.h  palette.h  part_variant.h  utils.h
engine/include/shared/utils/: arena.h  console.h  crc32.h  file.h  hash.h  macro.h  memory.h  string.h  string_map.h  types.h  utils.h
engine/node/: bridge.js
engine/source/app/: CMakeLists.txt  main.c
engine/source/shared/: CMakeLists.txt
engine/source/shared/command/: create.c  edit.c  init.c  process.c  uinit.c  utils.c
engine/source/shared/composition/: composition.c
engine/source/shared/image/: const.c  decoder.c  encoder.c  image.c  pixels_array.c  zlib.c
engine/source/shared/json/: array.c  const.c  idmap.c  json.c  object.c  psst.c  value.c
engine/source/shared/json/parser/: double.c  identifier.c  int64.c  key.c  parser.c  recovery.c  search_colon.c  search_comma.c  search_contmark.c  search_eof.c  string_key.c  string_value.c  value.c
engine/source/shared/jsonmat/: colorrp.c  const.c  hexstring.c  jsonmat.c  matroot.c  model.c  palette.c  part_variant.c
engine/source/shared/material/: color_stat.c  const.c  map.c  material.c
engine/source/shared/utils/: arena.c  console.c  crc32.c  file.c  hash.c  string.c  string_map.c
(+44 files in other folders)
